Fix 15 code-review findings across correctness, security, and code quality
Correctness:
- Guard against division-by-zero in Convertor when a stored rate is 0; throw
  RateNotFoundException instead of leaking ArithmeticException to the caller
- Per-entry try/catch in CryptoRateParser Jackson loop so one bad history entry
  no longer aborts all subsequent entries for that fetch cycle
- Move crypto update timestamp inside the non-empty check in RateUpdater so a
  no-data result (no API key, no CSVs) does not suppress retries for the day
- Fix FiatRateParser rate regex from [0-9.]+ to [0-9]+(\.[0-9]+)? to reject
  malformed values like "1.2.3" that would throw in BigDecimal

Security / injection:
- Validate --exchange symbol format (^[A-Z0-9]{2,10}$) in CLI before the
  symbol reaches JSON body interpolation in CryptoRateFetcher
- Add the same format guard inside CryptoRateFetcher.fetchFromProvider as a
  defence-in-depth check at the source level
- Replace innerHTML with DOM textContent in result display success path and
  postSetting error display to complete the XSS hardening

Data quality:
- Fix regex fallback in CryptoRateParser to match JSON objects and extract
  date + rate independently, so reversed field order no longer silently drops
  all records from custom providers
- Strip UTF-8 BOM from CSV content before parsing headers to prevent the first
  column key from becoming "﻿end" and silently using wrong column indices

Code quality:
- Extract ConvertResponse.crossOf() and remove identical buildCrossResponse()
  from both RequestController and CommandLineRequest
- Cache the combined currency name map in CurrencyClassifier as a static
  field; remove double getCurrencyNames() call in WebController
- Extract seedDefaultsIfEmpty() helper in CryptoRateUpdater to remove
  duplicated default-seeding logic in addTrackedSymbol/removeTrackedSymbol
- Fix date initialisation in web UI to use local calendar date instead of UTC
  so users east of UTC see the correct day as